libs/preprocessor/tests/errors/pe5_define_multitoken_argument/stderr.ansi
[31m[PE5] Error:[0m define arguments missing comma
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:1:12[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m#[0m[38;5;249md[0m[38;5;249me[0m[38;5;249mf[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249m [0m[38;5;249mH[0m[38;5;249mI[0m[38;5;249m([0m[38;5;187mv[0m[38;5;187ma[0m[38;5;187mr[0m[38;5;187m1[0m[38;5;201m [0m[38;5;155mv[0m[38;5;155ma[0m[38;5;155mr[0m[38;5;155m2[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249mH[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249m [0m[38;5;249mv[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249m1[0m[38;5;249m [0m[38;5;249mv[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249m2[0m
 [38;5;240m  │[0m                [38;5;201m│[0m      
 [38;5;240m  │[0m                [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m multiple tokens found without a [38;5;201mcomma[0m
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: try `[38;5;187mvar1[0m[38;5;201m,[0m [38;5;155mvar2[0m`
[38;5;246m───╯[0m
